--- a/clientside/package.json
+++ b/clientside/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.7.2",
     "ethers": "^6.13.2",
     "next": "14.2.5",
+    "prop-types": "^15.8.1",
+    "props-type": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
