--- a/clientside/package.json
+++ b/clientside/package.json
@@ -16,6 +16,7 @@
     "props-type": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "web3": "^4.11.1"
   },
