--- a/clientside/package.json
+++ b/clientside/package.json
@@ -18,12 +18,14 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
-    "web3": "^4.11.1"
+    "web3": "^4.11.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "hardhat": "^2.22.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
