--- a/clientside/package.json
+++ b/clientside/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start:hardhat": "node ./scripts/start-hardhat.js"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
     "axios": "^1.7.2",
-    "ethers": "^6.13.2",
+    "ether": "^0.0.9",
+    "ethers": "^6.4.0",
     "next": "14.2.5",
     "prop-types": "^15.8.1",
     "props-type": "^1.0.1",
@@ -19,15 +22,29 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "web3": "^4.11.1",
+    "web3modal": "^1.9.12",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "hardhat": "^2.22.7",
+    "chai": "^4.2.0",
+    "hardhat": "^2.14.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8",
+    "solidity-coverage": "^0.8.0",
     "tailwindcss": "^3.4.1",
+    "typechain": "^8.3.0",
     "typescript": "^5"
   }
 }
