refactor: :sparkles: SmartContract to Frontend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["mainsection"],
+  "cSpell.words": ["ipfs", "mainsection"],
   "conventionalCommits.scopes": ["Smart contract"]
 }
