--- a/clientside/package.json
+++ b/clientside/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "ether": "^0.0.9",
-    "ethers": "^6.4.0",
+    "ethers": "^6.13.2",
     "hardhat": "^2.22.8",
     "ipfs-http-client": "^60.0.1",
     "next": "14.2.5",
