--- a/clientside/package.json
+++ b/clientside/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
+    "swiper": "^11.1.12",
     "web3": "^4.11.1",
     "web3modal": "^1.9.12",
     "yarn": "^1.22.22"
